<resources>
    <string name="app_name">App16_MovieAppCapstone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="movie_title_label">Movie Title</string>
    <string name="movie_image_item">Movie Image Item</string>
    <string name="movie_description_label">Movie Description</string>
    <string name="movie_item_description">
        Language : %1$s - : %2$s
    </string>
    <string name="detailMovie">Detail Movie</string>
    <string name="back_button">back button</string>
    <string name="play_button">play button</string>
    <string name="synopsis">Synopsis</string>
    <string name="dummy_overview">In this third installment of the adrenaline-fueled action franchise, super-assassin John Wick returns with a $14 million price tag on his head and an army of bounty-hunting…</string>
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="genres_dummy">Action, Crime, Thriller</string>
    <string name="rating_text_label"> %1$.1f/%2$d</string>
    <string name="rating_text">4.6/5</string>
    <string name="runtime_dummy_label">2hr 10m</string>
    <string name="title_dummy_label">John Wick 3: Parabellum</string>
    <string name="view_all">View All</string>
    <string name="production_company">Production Company</string>
    <string name="textview_company_item_label">textview_company_item_label</string>
    <string name="textview_company_item_country_label">textview_company_item_country_label</string>
    <string name="release_date_label">Release Date :</string>
    <string name="original_language">EN</string>
    <string name="add_to_favorite_label">Add to Favorite</string>
    <string name="remove_from_favorite_label">Remove from favorite</string>
    <string name="todo">TODO</string>
</resources>