<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.favorite.FavoriteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_loading"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/iv_backdrop_mask"
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_gradient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_backdrop" />

                <ImageButton
                    android:id="@+id/button_play"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="90dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/play_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play_button"
                    app:layout_constraintBottom_toTopOf="@+id/iv_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_backdrop"
                    app:layout_constraintVertical_bias="0.684" />

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="134dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:padding="2dp"
                    android:src="@drawable/ic_loading"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toTopOf="@+id/view_flipper_header_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
                    app:layout_constraintTop_toBottomOf="@+id/button_play" />

                <ViewFlipper
                    android:id="@+id/view_flipper_header_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_poster">
                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:trackThickness="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="24dp"
                        android:indeterminate="true" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_header_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    >

                        <TextView
                            android:id="@+id/textView_movie_detail_title"
                            style="?attr/textAppearanceHeadlineMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_dummy_label"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.49"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_movie_detail_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/runtime_dummy_label"
                            app:drawableStartCompat="@drawable/ic_baseline_access_time"
                            app:layout_constraintEnd_toStartOf="@+id/textview_movie_detail_release_date"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_movie_detail_title" />

                        <TextView
                            android:id="@+id/textview_movie_detail_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/release_date_label"
                            android:textAlignment="center"
                            app:drawableStartCompat="@drawable/ic_baseline_calendar_month"
                            app:flow_verticalAlign="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/textView_movie_detail_runtime"
                            app:layout_constraintTop_toTopOf="@+id/textView_movie_detail_runtime" />

                        <TextView
                            android:id="@+id/textView_movie_detail_genres"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="48dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/genres_dummy"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_movie_detail_runtime" />

                        <TextView
                            android:id="@+id/textview_movie_detail_rating"
                            style="?attr/textAppearanceBodyLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/rating_text"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/ratingBar_movie_detail_rating"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView_movie_detail_genres" />

                        <RatingBar
                            android:id="@+id/ratingBar_movie_detail_rating"
                            style="@style/Widget.App16_MovieAppCapstone.RatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:numStars="5"
                            android:rating="4"
                            app:layout_constraintBottom_toBottomOf="@+id/textview_movie_detail_rating"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textview_movie_detail_rating"
                            app:layout_constraintTop_toTopOf="@+id/textview_movie_detail_rating" />

                        <Button
                            android:id="@+id/button_favorite_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableLeft="@drawable/ic_baseline_add"
                            android:text="@string/add_to_favorite_label"
                            android:enabled="false"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ratingBar_movie_detail_rating" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ViewFlipper>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_chevron_left"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_movie_detail_title_toolbar"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:alpha="0"
                        android:scaleX="0"
                        android:scaleY="0"
                        android:maxLines="1"
                        android:text="@string/title_dummy_label"
                        android:textColor="@color/white"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView_movie_detail_genres_toolbar"
                        app:layout_constraintEnd_toStartOf="@+id/button_same"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/textView_movie_detail_genres_toolbar"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:drawablePadding="8dp"
                        android:gravity="start"
                        android:scaleX="0"
                        android:scaleY="0"
                        android:maxLines="1"
                        android:text="@string/genres_dummy"
                        android:textColor="@color/white"
                        app:drawableTint="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView_movie_detail_title_toolbar"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView_movie_detail_title_toolbar"
                        app:layout_constraintTop_toBottomOf="@+id/textView_movie_detail_title_toolbar"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageButton
                        android:id="@+id/button_same"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/todo"
                        android:padding="16dp"
                        android:scaleX="0"
                        android:scaleY="0"
                        android:src="@drawable/ic_baseline_favorite_border"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <ViewFlipper
            android:id="@+id/view_flipper_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                tools:context=".MainActivity">

            <TextView
                android:id="@+id/textview_movie_detail_overview_title"
                style="?attr/textAppearanceHeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_movie_detail_overview"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textview_movie_detail_overview_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_detail_overview_title" />

            <TextView
                android:id="@+id/textview_movie_detail_credits"
                style="?attr/textAppearanceHeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/production_company"
                app:layout_constraintStart_toStartOf="@+id/textview_movie_detail_overview_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_detail_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_movie_detail_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textview_movie_detail_credits"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_detail_credits"
                tools:itemCount="5"
                tools:listitem="@layout/view_item_company" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ViewFlipper>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>